--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type=”image/png” href="https://static.wikia.nocookie.net/the-walle-au/images/5/5c/Eve_2020.png">
     <title>Chatbot Interface</title>
     <style>
         body {
